<resources>
    <string name="app_name">Assignment</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="week_menu">WEEK\&apos;S MENU</string>
    <string name="date">Date</string>
    <string name="deliver_to">Deliver to: </string>
    <string name="amount">0.00</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="lunch">LUNCH</string>
    <string name="lunch_timing">10:00 AM - 03:00 PM</string>
    <string name="dinner">DINNER</string>
    <string name="dinner_timing">06:30 PM - 09:00 PM</string>
    <string name="navigation_text">Welcome to the offline food delivery Application</string>
    <string name="current_location">Your current location</string>
    <string name="delhi">New Delhi</string>
</resources>
