<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.assignment.activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/color_primary">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="@dimen/action_bar_icon_size"
                android:layout_height="@dimen/action_bar_icon_size"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:onClick="onClick"
                android:src="@mipmap/ic_menu" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/prev_date"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/image_text_margin"
                    android:background="@mipmap/left_arrow"
                    android:onClick="onClick" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/week_menu"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/date_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/next_date"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/image_text_margin"
                    android:background="@mipmap/right_arrow"
                    android:onClick="onClick" />
            </LinearLayout>

            <ImageView
                android:id="@+id/cart"
                android:layout_width="@dimen/action_bar_icon_size"
                android:layout_height="@dimen/action_bar_icon_size"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:onClick="onClick"
                android:src="@mipmap/ic_bag" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:layout_below="@id/toolbar_layout"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lunch_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/focussed_background"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lunch"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lunch_timing"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/divider_size"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottom_layout"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/dinner_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dinner"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dinner_timing"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:layout_below="@+id/tab_layout"
            android:background="@color/divider_color" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/food_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/divider_2"
            android:layout_below="@id/divider_1"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:layout_above="@+id/bottom_layout"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:onClick="onClick"
                android:src="@mipmap/ic_location_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/amount_layout"
                android:layout_toRightOf="@id/location_icon"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deliver_to"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/location_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/amount_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_indian_rupee_symbol" />

                <TextView
                    android:id="@+id/amount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLength="5"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text_size" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_layout_menu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/navigation_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/label_color"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>
